--- a/commands.yaml
+++ b/commands.yaml
@@ -153,6 +153,19 @@ time_now:
 say_hello:
   - поздоровайся с друзьями
   - передай привет
-
+create_note:
+  - запиши в заметки
+view_note:
+  - что у нас в заметках
+  - прочитай заметки
+  - что мы записали
+screen:
+  - сделай скрин
+  - сделай скриншот
+  - скриншот
+  - снимок
+  - снимок экрана
+clean:
+  - очисти заметки
 
 
